src/test/ui/self/elision/ref-mut-alias-async.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-alias-async.rs:17:54
   |
LL |     async fn ref_Alias(self: &mut Alias, f: &u32) -> &u32 {
   |                                                      ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-alias-async.rs:23:63
   |
LL |     async fn box_ref_Alias(self: Box<&mut Alias>, f: &u32) -> &u32 {
   |                                                               ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-alias-async.rs:29:63
   |
LL |     async fn pin_ref_Alias(self: Pin<&mut Alias>, f: &u32) -> &u32 {
   |                                                               ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-alias-async.rs:35:72
   |
LL |     async fn box_box_ref_Alias(self: Box<Box<&mut Alias>>, f: &u32) -> &u32 {
   |                                                                        ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-alias-async.rs:41:72
   |
LL |     async fn box_pin_ref_Alias(self: Box<Pin<&mut Alias>>, f: &u32) -> &u32 {
   |                                                                        ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0106`.
